- Moved all classes meaningful as API classes for PDP extensions (and therefore PDP extension implementers) to a separate project authzforce-ce-core-pdp-api - Lower findbugs alert threshold and fixed new findbugs issues - Removed inheritance of JAXB classes for most *Evaluator classes to simplify the code - Property placeholder replacement optimized, no longer done on the whole PDP conf document, but only when needed by policy provider extensions (e.g. to replace PARENT_DIR) - New XML-namespace-aware XML parser to support namespace-aware XPath evaluation of XACML Request/Policies - new CoreRefBasedPolicyProviderModule (root policy defined as a reference to a previously declared RefPolicyProviderModule and policy IdRef to be resolved by the latter) - PDP conf schema versioning (3.6): http://authzforce.github.io/core/xmlns/pdp/3.6  and depends on new pdp extension schema version: http://authzforce.github.io/xmlns/pdp/ext/3  - Fixed issue with control of max policy ref depth